Fixed z-index for filters z-index was no set causing, in some screens, to be on top of the screen and preventing some filters from being activated. z-index set to 3, the same as the icon. minified css and mix-manifest being provided as well (result of npm run prod).

--- a/resources/css/map.css
+++ b/resources/css/map.css
@@ -140,6 +140,7 @@ html,body {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     border-top-left-radius: 0;
     margin: 0;
+    z-index: 3;s
 }
 
 #features h2 {
